fix broken css

--- a/css/cover.css
+++ b/css/cover.css
@@ -139,7 +139,7 @@
    width: 100%;
    height: auto;
    object-fit: cover;
-   border: 2px solid #fff; /* Optional;
+   border: 2px solid #fff; /* Optional; */
  }
  
 /*
